docs: documentation for show opportunity
