# handler/showOpportunity.go
@@ -7,6 +7,18 @@ import (
 	"github.com/higordenomar/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show opportunity
+// @Description Show a job opportunity
+// @Tags Opportunities
+// @Accept json
+// @Produce json
+// @Param id query string true "Opportunity identification"
+// @Success 200 {object} ShowOpportunityResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opportunity [get]
 func ShowOpportunityHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 
